# borsh-cli

./: Cargo.toml  README.md  data.borsh  data.json  help.txt
src/: compress_schema.rs  dynamic_schema.rs  json_borsh.rs  main.rs
src/command/: decode.rs  encode.rs  extract.rs  mod.rs  pack.rs  strip.rs  unpack.rs
